--- a/Lab100.md
+++ b/Lab100.md
@@ -4,7 +4,7 @@
 
 You will need SQL Developer to load and view data into your ATP database. If you are having connectivity issues, make sure you are not on a VPN. 
 
-[Provisioning an Autonomous Database](https://oracle.github.io/learning-library/workshops/autonomous-transaction-processing/?page=LabGuide100ProvisionAnATPDatabase.md)
+[Provisioning an Autonomous Database](https://apexapps.oracle.com/pls/apex/dbpm/r/livelabs/view-workshop?wid=610&clear=180&session=2134912126706)
 
 This lab explains how to spin up an Autonomous Database and acquire your own Cloud Wallet. 
 
